[package]
authors = ["messense <messense@icloud.com>"]
description = "robots.txt parser for Rust"
documentation = "https://messense.github.io/robotparser-rs"
homepage = "https://github.com/messense/robotparser-rs"
keywords = ["robot", "robots", "parser", "spider", "crawler"]
license = "MIT"
name = "robotparser"
readme = "README.md"
repository = "https://github.com/messense/robotparser-rs"
version = "0.10.2"

[dependencies]
url = "1"

[dependencies.reqwest]
version = "0.9"
optional = true

[features]
default = ["http"]
http = ["reqwest"]
unstable = []
